# rxmc

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_emcee.txt
.github/workflows/: docs.yml  pypi-publish.yml  python-package.yml
docs/: api.rst  conf.py  index.rst
examples/: 30s_optical_potential_calibration.ipynb  fitting_an_optical_potential.ipynb  fitting_an_optical_potential_with_Edep.ipynb  koh_rxmc_sklearn_gp_discrepancy_demo.ipynb  line_unknown_err.ipynb  linear_calibration_demo.ipynb  local_calibration_demo.ipynb  model_discrepancy.ipynb  multi_constraint_systematic_err.ipynb  normalization_inference.ipynb  overconfidence.ipynb  parallel_calibration_demo.ipynb  requirements.txt  run_mcmc_exe_demo.ipynb  sampling_algos.ipynb  systematic_err_demo.ipynb  systematic_err_with_norm_inference.ipynb  test_gibbs.ipynb
examples/emcee/: README.md  emcee_driver.py  linear_model.py  linear_model_cal_conf.ipynb  posterior.py  requirements.txt  run_calibration.py  run_emcee_cal.slurm  visualize_calibration.ipynb
examples/rxmc_with_emcee_sampler/: run_emcee_cal.slurm
src/: __init__.py  __version__.py
src/calibration/: mcmc.py
src/cli/: __init__.py  emcee_driver.py
src/emcee/: README.md  create_calibration_config.ipynb  emcee_driver.py
src/rxmc/: __init__.py  adaptive_metropolis.py  config.py  constraint.py  corpus.py  correlated_discrepancy_likelihood_model.py  elastic_diffxs_constraint.py  (+21 more)
test/: test_config.py  test_constraint.py  test_evidence.py  test_likelihood_model.py  test_observation.py  test_proposal.py
